tests/ui/delegation/explicit-paths.stderr
error[E0308]: mismatched types
  --> $DIR/explicit-paths.rs:11:5
   |
LL |     reuse <F as Trait>::bar;
   |     ^^^^^^-----------------^
   |     |     |
   |     |     arguments to this function are incorrect
   |     expected `&F`, found `&S`
   |
   = note: expected reference `&F`
              found reference `&S`
note: method defined here
  --> $DIR/explicit-paths.rs:2:8
   |
LL |     fn bar(&self) -> i32 { 42 }
   |        ^^^ -----

error[E0308]: mismatched types
  --> $DIR/explicit-paths.rs:18:32
   |
LL |     reuse <S2 as Trait>::bar { &self.0 }
   |                                ^^^^^^^ expected `&S2`, found `&F`
   |
   = note: expected reference `&S2`
              found reference `&F`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
